subo cada pagina de las diferentes categorias con un par de items + linkeo completo + Pagina de carga hecha por Leandro bucco)

--- a/views/carrito.ejs
+++ b/views/carrito.ejs
@@ -81,6 +81,7 @@
                                                       <li><a href="">Sanitarios</a></li>
                                                       <li><a href="">Bañeras y Duchas</a></li>
                                                       <li><a href="">Accesorios varios</a></li>
+                                                      <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -101,7 +102,7 @@
                                                
                                                    </li> 
                                                 
-                                                <li><a href="http://www.twitter.com"><i class="fab fa-twitter" ></i></a></li>
+                                                   <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
                                                 <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a  href="""><i  class="fas fa-phone"></i></a></li>
                                               
