--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,11 +81,12 @@
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
                                                         <li><a href="/catebanio">Griferia Baño</a></li>
-                                                        <li><a href="">Griferia Cocina</a></li>
-                                                        <li><a href="">Bachas</a></li>
-                                                        <li><a href="">Sanitarios</a></li>
-                                                        <li><a href="">Bañeras y Duchas</a></li>
-                                                        <li><a href="">Accesorios varios</a></li>
+                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
+                                                        <li><a href="/bachas">Bachas</a></li>
+                                                        <li><a href="/sanitarios">Sanitarios</a></li>
+                                                        <li><a href="/banieras">Bañeras y Duchas</a></li>
+                                                        <li><a href="/accesorios">Accesorios varios</a></li>
+                                                        <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -106,7 +107,7 @@
                                                
                                                    </li> 
                                                 
-                                                <li><a href="http://www.twitter.com"><i class="fab fa-twitter" ></i></a></li>
+                                                   <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
                                                 <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a  href="""><i  class="fas fa-phone"></i></a></li>
                                               
@@ -165,7 +166,7 @@
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Publica y vende!</span></h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">Publica y vende tus productos de griferia nuevos o usados!</p>
-                                    <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a>
+                                    <a href="/carga" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
