--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -84,12 +84,13 @@
                                              
                                               <li><a href="/categoria">Categorias</a>
                                                   <ul class="submenu">
-                                                    <li><a href="">Griferia Baño</a></li>
-                                                    <li><a href="">Griferia Cocina</a></li>
-                                                    <li><a href="">Bachas</a></li>
-                                                    <li><a href="">Sanitarios</a></li>
-                                                    <li><a href="">Bañeras y Duchas</a></li>
-                                                    <li><a href="">Accesorios varios</a></li>
+                                                    <li><a href="/catebaño">Griferia Baño</a></li>
+                                                    <li><a href="/catecocina">Griferia Cocina</a></li>
+                                                    <li><a href="/bachas">Bachas</a></li>
+                                                    <li><a href="/sanitarios">Sanitarios</a></li>
+                                                    <li><a href="/banieras">Bañeras y Duchas</a></li>
+                                                    <li><a href="/accesorios">Accesorios varios</a></li>
+                                                    <li><a href="/categoria">ver todas</a></li>
                                                   </ul>
                                               </li>
                                           
@@ -110,7 +111,7 @@
                                              
                                                  </li> 
                                               
-                                              <li><a href="http://www.twitter.com"><i class="fab fa-twitter" ></i></a></li>
+                                                 <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
                                               <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
                                               <li><a  href="""><i  class="fas fa-phone"></i></a></li>
                                             
