--- a/views/carga.ejs
+++ b/views/carga.ejs
@@ -143,21 +143,56 @@
     
        
     <section class="form-register2">
-        <h4>Formulario Registro</h4>
-        <input class="controlls2" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre" required>
-        <input class="controlls2" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido" required>
-        <input class="controlls2" type="email" name="correo" id="correo" placeholder="Ingrese su Correo" required>
-        <input class="controlls2" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña" required>
-        <input class="controlls2" type="password" name="contraseña" id="contraseña" placeholder="Repita su Contraseña" required>   
-         <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
-         <input class="botons" type="submit" value="Registrar">
-         <p><a href="iniciarsesion.html">¿Ya tenes cuenta?</a></p>
+        <h4>Carga tu producto</h4>
+        <input class="controlls2" type="email" name="correo" id="correo" placeholder="Titulo de la publicacion" required>
+        <input class="controlls2" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">   
+        <label for="Categorias"></label>
+            <select class="controlls2">
+                <option value="">Selecciona una Categoria</option>
+                <option value="o1">Griferia Baño</option>
+                <option value="o2">Griferia Cocina</option>
+                <option value="o3">Bachas</option>
+                <option value="o4">Sanitarios</option>
+                <option value="o5">Bañeras y Duchas</option>
+                <option value="o6">Accesorios Varios</option>
+                
+            </select>
+        </label>
+        <label for="controlls2"></label>
+        <select class="controlls2">
+            <option value="">Selecciona un tipo de producto</option>
+            <option value="o1">Griferia</option>
+            <option value="o2">Sanitarios</option>
+            <option value="o3">Duchas</option>
+            <option value="o4">Bañeras</option>
+            <option value="o5">Bachas</option>
+            <option value="o6">Muebles y Espejos</option>
+            <option value="o7">otros</option>
+        </select>
+    
+      </select>
+      <label for="estProduc"></label>
+      <input type="radio" name="estProduc" value="new">Nuevo
+      <input type="radio" name="estProduc" value="usado">Usado
+      <br>
+      <br>
+
+      <label for="explicacion">Breve descripcion del producto</label>
+      <br>
+      <input class="controlls2" type="email" name="descripcion" id="descripciones" placeholder="Ingrese breve descripción" required>
+          <input class="controlls" type="file" name="archivo"> 
+          <label for="estProduc"></label>
+      <input type="radio" name="estProduc" value="new" >Acepto los terminos y condiciones de Wasser Argentina.
+         <input class="botons" type="submit" value="Continuar">
         
     </section>
-<!-- Scroll Up -->
-<div id="back-top" >
-    <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-</div>
+
+    
+    
+
+
+
+
 
 <!-- JS here -->
 
