--- a/views/catebanio.ejs
+++ b/views/catebanio.ejs
@@ -88,6 +88,7 @@
                                                         <li><a href="/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/banieras">Bañeras y Duchas</a></li>
                                                         <li><a href="/accesorios">Accesorios varios</a></li>
+                                                        <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -108,7 +109,7 @@
                                                
                                                    </li> 
                                                 
-                                                <li><a href="http://www.twitter.com"><i class="fab fa-twitter" ></i></a></li>
+                                                   <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
                                                 <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a  href="""><i  class="fas fa-phone"></i></a></li>
                                               
@@ -151,16 +152,7 @@
             </form>
         </div>
     </div>              
-    <!--espacio en blaco con sombra-->
-
-    <div class="container">    
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio2.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        </div>
-      </div>
-    </div>
-
+    
     
     <div class="container">    
         <div class="row">
