--- a/views/categoria.ejs
+++ b/views/categoria.ejs
@@ -83,11 +83,12 @@
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
                                                         <li><a href="/catebanio">Griferia Baño</a></li>
-                                                        <li><a href="/cocina">Griferia Cocina</a></li>
+                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
                                                         <li><a href="/bachas">Bachas</a></li>
                                                         <li><a href="/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/banieras">Bañeras y Duchas</a></li>
                                                         <li><a href="accesorios">Accesorios varios</a></li>
+                                                        <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -108,7 +109,7 @@
                                                
                                                    </li> 
                                                 
-                                                <li><a href="http://www.twitter.com"><i class="fab fa-twitter" ></i></a></li>
+                                                   <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
                                                 <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a  href="""><i  class="fas fa-phone"></i></a></li>
                                               
