Agregue pagina sobre nosotros

--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -261,8 +261,10 @@
               <div class="card h-100">
                 <div class="card-body">
                   <h2 class="card-title">Tambien puede interesarte</h2>
-                  <a href="/producto"><img src="https://http2.mlstatic.com/griferia-canilla-monocomando-lavatorio-de-bano-fiting-shop-D_NQ_NP_848355-MLA40290886792_122019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a
-                </div>
+                  <a href="/producto"><img src="https://http2.mlstatic.com/griferia-canilla-monocomando-lavatorio-de-bano-fiting-shop-D_NQ_NP_848355-MLA40290886792_122019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a>
+                  </div>
+              </div>
+          
                 
               </div>
             </div>
