--- a/views/sobrenosotros.ejs
+++ b/views/sobrenosotros.ejs
@@ -109,7 +109,7 @@
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
                                                 <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="/sobrenosotros"><i  class="fas fa-phone"></i></a></li>
+                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -140,42 +140,7 @@
     </header>
     <main>
         <!--? slider Area Start-->
-        <div class="slider-area position-relative">
-            <div class="slider-active">
-                <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
-                                <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>compra!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontra lo que buscas entre miles de productos nuevos y usados!</p>
-                                    <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a>
-
-                                   
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
-                <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
-                                <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Publica y vende!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Publica y vende tus productos de griferia nuevos o usados!</p>
-                                    <a href="/carga" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
-            </div>
-            
-        </div>
-        <!-- slider Area End-->
+        
         
         <!--? Gallery Area Start -->
         <div class="gallery-area">
@@ -183,36 +148,38 @@
                 <div class="row no-gutters">
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-gallery text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery1.png);"></div>
+                            <div class="gallery-img" style="background-image: url(stylesheets/img/integrantes/uriel.png);"></div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>Todo para tu baño</h3>
-                                    <p>Queres renovar tu cuarto de baño o ya lo hiciste y no sabes que hacer con los viejos artefactos? visita la categoria y compra y vende TODO!</p>
-                                    <a href="/catebanio">Categoria Baño</a>
+                                    <h3>LEANDRO URIEL TURRION</h3>
+                                    <p>Actualmente Técnico en refrigeración y tecnico en reparador de PC , ingresante de la Unsam en la Tecnicatura en Programación Informática y con ganas de aprender todo sobre programacion con el curso de Digital House  y así poder trabajar desde su casa.
+                                    </p>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-gallery no-margin text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery2.png);"></div>
+                            <div class="gallery-img" style="background-image: url(stylesheets/img/integrantes/facu.png);"></div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>Todo Para tu cocina</h3>
-                                    <p>La griferia que siempre soñaste para tu cocina con una pequeña variedad de artefactos para acompañar! Tambien si tenes algo que te sobre lo podes publicar!</p>
-                                    <a href="/catecocina">Categoria Cocina</a>
+                                    <h3>FACUNDO GABRIEL VARA</h3>
+                                    <p>Estudió Diseño gráfico en la Uba y luego Diseño y comunicacion visual en a Universidad de Lanús. Actualmete Diseñador Gráfico Freelancer y estudiando Licenciatura en Sistemas en la universidad de lanus y cursando Full Stack Developer en Digital House.</p>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-gallery text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery3.png);"></div>
+                            <div class="gallery-img" style="background-image: url(stylesheets/img/integrantes/bucco.png);"></div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>Griferia General</h3>
-                                    <p>No dejes de visitar todas nuestras categorias para encontrar el producto que más se adapte a tus necesidades!</p>
-                                    <a href="/categoria">Todas las categorias</a>
+                                    <h3>LEANDRO EZEQUIEL BUCCO</h3>
+                                    <p>Técnico reparador de PC, Instalador y administrador de Redes. Actualmente estudiante de la Universidad Nacional de San Martin en la Tecnicatura en Programacion Informatica y tambien cursando programación web full stack Developer en Digital House.
+                                    </p>
+                                    
                                 </div>
                             </div>
                         </div>
